# study-haskell

./: .gitignore
cis194/: HW01.hs  HW01Tests.hs  HW02.hs  HW02Tests.hs  HW03.hs  HW04.hs  README.md  Testing.hs
cis194/Lec-09-Testing/: Testing.hs
cis194/hw05/: .gitignore  HW05.hs
cis194/hw05/data/: new-transactions.json
cis194/hw06/: .gitignore  HW06.hs
cis194/hw07/: HW07.hs
try-yesod/: README.md
try-yesod/yosog/: Application.hs  Foundation.hs  stack.yaml  yosog.cabal
try-yesod/yosog/Handler/: Blog.hs
try-yesod/yosog/config/: keter.yml  models  routes  settings.yml  test-settings.yml
try-yesod/yosog/templates/: articles.hamlet
wai-try/: Main.hs  wai-try.cabal
wai-try/app/: Main.hs
write-scheme-48/: main.hs  notes.md
write-scheme-48h/: LICENSE  notes.md  write-scheme-48h.cabal
write-scheme-48h/src/: Main.hs  Scheme.hs  Test.hs
