name:                write-scheme-48h
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexanderlobov/write-scheme-48h#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Lobov
maintainer:          alexanderlobov@yandex.ru
copyright:           copyright
category:            brains porn
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scheme
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec
